# lv2-plugins

./: .gitignore  CMakeLists.txt  README.md  new_plugin.sh
build_support/: add_plugin.cmake  deploy_turtle_files.sh
docs/: build_and_install_lv2_plugins.md
lowpass/: CMakeLists.txt  lowpass.c  lowpass.ttl  manifest.ttl.in
plugin_template/: CMakeLists.txt  foo.c  foo.ttl  manifest.ttl.in  template.c  template.ttl
simple_delay/: .lock-waf_darwin_build  CMakeLists.txt  amplification_lookup.h  manifest.ttl  manifest.ttl.in  simple_delay.c  simple_delay.ttl  wscript
simple_lowpass_fft/: simple_lowpass_fft.c  simple_lowpass_fft.ttl
